# ofxGgmlCore

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEEP_REVIEW_SUMMARY.md  HERMES.md  INNOVATIVE_IMPROVEMENTS.md  README.md  SECURITY_NOTES.md  addon_config.mk  ecosystem.json  ofxggml-addon.json  plan.md
.github/: copilot-instructions.md  pull_request_template.md
docs/: API_STABILITY.md  ARCHITECTURE.md  BATCH_INFERENCE.md  CHANGELOG.md  CODING_AGENTS.md  CODING_AGENT_WORK.md  COMPANIONS.md  COMPATIBILITY.md  CONTROL_PLANE_NEXT_STEPS.md  CORE_CONTRACT.md  ECOSYSTEM_AGENT.md  ECOSYSTEM_MANIFEST.json  ECOSYSTEM_STATUS.md  EDL_EXPORT.md  EXAMPLES.md  IMPLEMENTED_IDEAS_TUTORIAL.md  LOCAL_CODEX_LLAMA_SERVER.md  NVIGI.md  OFXGGML_STABLEDIFFUSION_INTEGRATION.md  PHASE_1_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASE_READINESS.md  ROADMAP.md  SEGMENTATION.md  SUBTITLE_FUNCTIONALITY.md  THREADING.md  VIDEO_TUTORIAL_PLAN.md  addon-family-sync.md  addon-metadata-schema.md  autonomous-maintenance-roadmap.md  backend-capability-report.md  backend-runtime-verification-strategy.md  backend-verification-plan.md  cross-repo-metadata-strategy.md  docs-site-strategy.md  ecosystem-dashboard.md  ecosystem-dependency-graph.md  ecosystem-standards.md  (+12 more)
ofxGgmlAdvancedVisionExample/: Makefile  README.md
ofxGgmlChatExample/: README.md
ofxGgmlCoreExample/: addons.make
ofxGgmlGuiExample/: README.md  addons.make
ofxGgmlMontagePlannerExample/: Makefile  README.md
ofxGgmlMusicExample/: Makefile  README.md
ofxGgmlSamExample/: Makefile  README.md
ofxGgmlTextExample/: addons.make
ofxGgmlVideoEssayExample/: Makefile  README.md
ofxGgmlVisualizationExample/: Makefile  README.md
ofxGgmlWebScrapingExample/: README.md
scripts/: assert-release-readiness.bat  assert-release-readiness.ps1  doctor.sh  (+186 more)
tests/: CMakeLists.txt  README.md  ggml-alloc.h  ggml-backend.h  ggml-cpu.h  ggml.h  gguf.h  test_acestep_bridge.cpp  test_assistant_eval.cpp  test_assistant_team.cpp  test_benchmark.cpp  test_chat_assistant.cpp  test_clip_inference.cpp  test_code_assistant.cpp  test_code_review.cpp  test_coding_agent.cpp  test_collaborative_workflow.cpp  test_companion_project_memory.cpp  test_continuity_asset_ledger.cpp  test_conversation_manager.cpp  test_core.cpp  test_diffusion_inference.cpp  test_easy_api.cpp  test_embedding.cpp  test_focused_example_catalog.cpp  test_graph.cpp  test_inference.cpp  test_integration_surface.cpp  test_llama_cli_text.cpp  test_llama_server_text.cpp  test_long_video_planner.cpp  test_media_prompt_generator.cpp  test_milkdrop_generator.cpp  test_model.cpp  test_music_generator.cpp  test_nvigi_bridges.cpp  test_performance_profile.cpp  test_personalization_profile.cpp  test_plugin_registry.cpp  test_project_memory.cpp  (+21 more)
tests/public_headers/: include_ofxGgml.cpp  include_ofxGgmlCore.cpp  include_ofxGgmlEmbedding.cpp  include_ofxGgmlLlamaServerEmbeddingBackend.cpp  include_ofxGgmlSam3.cpp  include_ofxGgmlSegmentation.cpp  include_ofxGgmlText.cpp
(+198 files in other folders)
